                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 16-06-2006 fixed: <previouswindow> tag wasn't initialized (meant you were stuck in Settings after changing from Mc360 -> PM3)
 - 16-06-2006 fixed: Spincontrols could show ?0? when the value was out of range - defaults back to the first value now.
 - 16-06-2006 fixed: Changed the default colour to use for HW overlays to 010101 (fixes transparency issues with OSDs)
 - 15-06-2006 fixed: trouble with startup lock.
 - 14-06-2006 added: Dialog().browse  to Python. Lets the user navigate with the FileManager.
 - 14-06-2006 fixed: GetThumb in Album and Movie information screens allows browsing to find thumb.
 - 13-06-2006 removed: Settings options for hiding file or directory labels in thumbpanel - it's a skin property now.
 - 13-06-2006 fixed: [ 1505303 ] global subs off, issue when enabling vobsubs.
 - 13-06-2006 fixed: vobsubs stored as .idx + .rar should now work.
 - 12-06-2006 added: [ 1504525 ] <onclick> tags fillable using SkinSetting strings, thanks to Nuka1195.
 - 12-06-2006 fixed: Playlists containing a single stream or file are now left alone.
 - 12-06-2006 added: <back>BackSpace</back> to keymap.xml for numeric input dialog to allow backpace with remote.
 - 12-06-2006 fixed: problems with programdatabase upgrade code.
 - 12-06-2006 changed: <hidelabels> is now part of the thumbnailpanel control in the skin.
 - 12-06-2006 fixed: Label wrapping of the last word before a carriage return.
 - 12-06-2006 fixed: .strm files failed to play.
 - 11-06-2006 changed: mplayer now uses xbmc ftp filesystem. seeking is disabled for now due to lockups in curl. (works when using dvdplayer or mplayer without cache)